[package]
name = "envop"
version = "0.2.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.7"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
libc = "0.2"
nix = "0.23"
prost = "0.10"
rpassword = "6"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tempfile = "3"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "net", "signal", "process"] }
tonic = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
