[package]
name = "envop"
version = "0.2.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.8"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
libc = "0.2"
nix = "0.25"
prost = "0.11"
rpassword = "6"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "net", "signal", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
